Closed Bug 1253688 Opened 7 years ago Closed 7 years ago

Loop broken in e10s (chat window doesn't open)

Categories

(Hello (Loop) :: Client, defect)

defect
Not set
normal

Tracking

(e10sm9+, firefox46 fixed, firefox47 fixed)

RESOLVED FIXED
mozilla47
Tracking Status
e10s m9+ ---
firefox46 --- fixed
firefox47 --- fixed

People

(Reporter: billm, Assigned: jimm)

References

Details

Attachments

(1 file)

STR:
1. Start a Nightly build.
2. Set the pref "loop.remote.autostart" to true.
3. Restart.
4. Click on the Hello icon (smiley face) in the toolbar.
5. Click through the intro material if you haven't already and then click again.
6. Click "Browse this page with a friend".

ER:
A chat window pops up. Right now the camera functionality seems to be broken, which I think is a separate bug. But you should at least see a chat window in the lower right corner.

AR:
Nothing pops up and the browser doesn't respond when you mouse over tabs or buttons. If I open a new tab, then the chat window appears. Seems like a drawing issue.

I bisected this regression to bug 1229429. Jim, can you take a look? If I back that patch out locally, the problem goes away.
Flags: needinfo?(jmathies)
That is surprising since that code only affects windowed plugin display. I'll try to reproduce.
Flags: needinfo?(jmathies)
Ok I can reproduce. Fixing this is easy but I'd also like to try and avoid regressing bug 1229429. Playing around with an alternative fix.
Assignee: nobody → jmathies
Blocks: 1229429
tracking-e10s: --- → m9+
I think I'll just back out 1229429 so I can uplift the change to beta.
Attached patch backout patchSplinter Review
Bug 1253688 fixed a non-blocking e10s specific bug related plugins. This should be safe to take all the way up to beta 45 since 45 won't enable e10s in release. The backout fixes a really bad loop regression in a chat window loop creates when you open the "browse this page with a friend" feature.

I'm going to work on an alternative fix for bug 1253688 with the hope of getting it fixed in 47 or 48 in time for e10s rollout to release.
Attachment #8726979 - Flags: review?(wmccloskey)
Attachment #8726979 - Flags: review?(wmccloskey) → review+
Comment on attachment 8726979 [details] [diff] [review]
backout patch

Approval Request Comment
[Feature/regressing bug #]:
e10s specific bug caused by bug 1253688
[User impact if declined]:
Bug 1253688 fixed a non-blocking e10s specific bug related plugins. This should be safe to take all the way up to beta 45 since 45 won't enable e10s in release. The backout fixes a really bad loop regression in a chat window loop creates when you open the "browse this page with a friend" feature.
[Describe test coverage new/current, TreeHerder]:
just landed on mc, trying to get into aurora before the merge. Could wait for the beta 2 build if necessary.
[Risks and why]: 
low - well understood code, e10s specific
[String/UUID change made/needed]:
none
Attachment #8726979 - Flags: approval-mozilla-aurora?
https://hg.mozilla.org/mozilla-central/rev/2523b65f4676
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
Comment on attachment 8726979 [details] [diff] [review]
backout patch

Fix for Loop/e10s regression, let's try to get this into aurora for the 46 beta 1 build.
Attachment #8726979 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.