Bug 1253688 - Backout bug 1229429 which caused a painting problem with Loops remote browser chat window with e10s enabled. r=billm,a=lizzard

MozReview-Commit-ID: 3tAgOAmnJli