gfx/layers/ipc/CompositorParent.cpp
@@ -2179,15 +2179,8 @@ CompositorParent::UpdatePluginWindowState(uint64_t aId)
 
   // Check if this layer tree has received any shadow layer updates
   if (!lts.mUpdatedPluginDataAvailable) {
-    if (mLastPluginUpdateLayerTreeId != aId) {
-      lts.mUpdatedPluginDataAvailable = true;
-      mPluginsLayerOffset = nsIntPoint(0,0);
-      mPluginsLayerVisibleRegion.SetEmpty();
-      PLUGINS_LOG("[%" PRIu64 "] new layer id, refreshing", aId);
-    } else {
-      PLUGINS_LOG("[%" PRIu64 "] no plugin data", aId);
-      return false;
-    }
+    PLUGINS_LOG("[%" PRIu64 "] no plugin data", aId);
+    return false;
   }
 
   // pluginMetricsChanged tracks whether we need to send plugin update
